--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "node-mailer": "^0.1.1",
     "nodemailer": "^7.0.5",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
